--- a/InitiativesPlus.Presentation/Resources/ErrorStrings.en-US.resx
+++ b/InitiativesPlus.Presentation/Resources/ErrorStrings.en-US.resx
@@ -117,7 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AlreadyInInitiative" xml:space="preserve">
+    <value>You're already a member of this initiative.</value>
+  </data>
+  <data name="FailedRoleUpdate" xml:space="preserve">
+    <value>Updating role for user {0} failed on save.</value>
+  </data>
   <data name="UserExists" xml:space="preserve">
     <value>Username is already taken.</value>
+  </data>
+  <data name="UserNotExist" xml:space="preserve">
+    <value>Could not find user with an username of {0}.</value>
+  </data>
+  <data name="UserNotInInitiative" xml:space="preserve">
+    <value>You're not a member of this initiative.</value>
   </data>
 </root>
